# tlo-file-similarity

./: .gitmodules  CMakeLists.txt  README.md  chrono.cpp  chrono.hpp  compare.cpp  compare.hpp  container.hpp  damerau-levenshtein-test.cpp  damerau-levenshtein.cpp  damerau-levenshtein.hpp  database.cpp  database.hpp  filesystem.cpp  filesystem.hpp  fuzzy.cpp  fuzzy.hpp  hash.cpp  hash.hpp  lcs-test.cpp  lcs.cpp  lcs.hpp  levenshtein-test.cpp  levenshtein.cpp  levenshtein.hpp  options.cpp  options.hpp  print.hpp  similarity.cpp  similarity.hpp  sqlite3.cpp  sqlite3.hpp  stop.cpp  stop.hpp  string.cpp  string.hpp  tlo-check-similarity.cpp  tlo-find-similar-files.cpp  tlo-find-similar-hashes.cpp  tlo-fuzzy-hash.cpp
include/tlo-file-similarity/: compare.hpp  database.hpp  fuzzy.hpp
samples/: Moved-Some-Lines.txt  Moved-Some-Words.txt  Original.txt  README.md  Removed-1st-Half.txt  Removed-2nd-Half.txt  Removed-Some-Lines.txt  Removed-Some-Words.txt  Swapped-3rd-And-4th-Paragraphs.txt
src/: compare.cpp  database.cpp  fuzzy.cpp  tlo-find-similar-hashes.cpp  tlo-fuzzy-hash.cpp
